Fix #132: Show markers and rollover w/o overlap

--- a/src/components/views/css/Chart.css
+++ b/src/components/views/css/Chart.css
@@ -1,7 +1,11 @@
+.chart {
+    margin-top: 20px;
+}
+
 /* Work around this issue:
    https://github.com/metricsgraphics/metrics-graphics/issues/839 */
-.metricsGraphicsCon:hover .mg-markers {
-    visibility: hidden;
+.mg-active-datapoint-container {
+    transform: translate(0, -50px);
 }
 
 /* Work around for this issue:
